--- a/src/components/AudioPlayer/AudioPlayer.css
+++ b/src/components/AudioPlayer/AudioPlayer.css
@@ -1,6 +1,6 @@
 .audio-player-btn {
   position: fixed;
-  bottom: 1.5rem;
+  bottom: 4.5rem;
   left: 1.5rem;
   z-index: 1000;
   width: 36px;
